refactor: Return health report from controller to include it in swagger.
